fix audio button on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -85,11 +85,17 @@ body.mobile .tips.touch {
         -ms-user-select: none;
             user-select: none;
 }
-body.desktop .sound-button img {
+body.desktop .sound-button {
     width: 30px;
+    height: 30px;
 }
-body.mobile .sound-button img {
+body.mobile .sound-button {
     width: 20px;
+    height: 20px;
+}
+.sound-button img {
+    width: 100%;
+    height: 100%;
 }
 .sound-button img.hidden {
     display: none;
